--- a/docker-extension/my-blog/Dockerfile
+++ b/docker-extension/my-blog/Dockerfile
@@ -5,4 +5,4 @@ COPY startup.sh /startup.sh
 ENV TZ=Asia/Shanghai
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 RUN bash -c 'touch /app.jar'
-CMD ["sh", "/startup.sh"]
+CMD ["bash", "/startup.sh"]
