--- a/pom.xml
+++ b/pom.xml
@@ -161,7 +161,7 @@
         </dependency>
     </dependencies>
 
-    <!-- 普通的maven打包方式 -->
+    <!-- 普通的maven打包方式
     <build>
         <plugins>
             <plugin>
@@ -170,10 +170,11 @@
             </plugin>
         </plugins>
     </build>
+     -->
     <!-- 普通的maven打包方式 -->
 
     <!-- 结合docker的maven打包方式,并上传提交创建的镜像 -->
-    <!--<build>
+    <build>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -204,7 +205,7 @@
                 </configuration>
             </plugin>
         </plugins>
-    </build>-->
+    </build>
     <!-- 结合docker的maven打包方式,并上传提交创建的镜像 -->
 
 </project>
